SERVER-19195 SyncClusterConnection should return error code obtained from config servers when write \$cmd fails